--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
             </div>
             <div class="col-12 col-md">
                 <div class="text-wrapper">
-                    <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>Finance&nbsp;Trading Company</strong></h1>
+                    <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>Herramientas&nbsp; Laborales</strong></h1>
                     <p class="mbr-text mbr-fonts-style display-7">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut dapibus massa, efficitur varius augue. In vel elit lorem. Fusce et dui fringilla, suscipit nulla viverra nunc. Nulla ut justo enim vehicula maximus.</p>
                     <div class="mbr-section-btn mt-3"><a class="btn btn-secondary display-4" href="https://mobiri.se">Get Started</a>
-                        <a class="btn btn-primary display-4" href="https://mobiri.se">Read More</a></div>
+                        </div>
                 </div>
             </div>
         </div>
