--- a/page4.html
+++ b/page4.html
@@ -104,7 +104,7 @@
 
     <div class="container-fluid">
         <div class="mbr-section-head">
-            <h3 class="mbr-section-title mbr-fonts-style align-center m-0 display-2"><strong>Our Works</strong></h3>
+            <h3 class="mbr-section-title mbr-fonts-style align-center m-0 display-2"><strong>Nuestros Miembros</strong></h3>
             <h4 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-2 display-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
         </div>
         <div class="row mbr-gallery mt-4">
