--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
     </div>
 </section>
 
+<h2>
+    Para poder ver las ofertas es necesario que te registres e inicies Sesion.
+</h2>
+
 <section data-bs-version="5.1" class="features1 cid-sFzyUE9AaP" id="features1-1i">
     
 
