--- a/page1.html
+++ b/page1.html
@@ -46,7 +46,7 @@
             <div class="container">
                 <div class="navbar-brand">
                     
-                    <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-7" href="page7.html">Herramientas</a></span>
+                    <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-7" href="index.html">Herramientas</a></span>
                 </div>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <div class="hamburger">
