--- a/page4.html
+++ b/page4.html
@@ -44,7 +44,7 @@
             <div class="container">
                 <div class="navbar-brand">
                     
-                    <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-7" href="page7.html">Herramientas</a></span>
+                    <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-7" href="index.html">Herramientas</a></span>
                 </div>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <div class="hamburger">
@@ -246,7 +246,7 @@
             <div class="col-sm-6 col-lg-4">
                 <div class="card-wrap">
                     <div class="image-wrap">
-                        <img src="assets/images/mbr-16.jpeg" alt="Mobirise Website Builder">
+                        <img src="assets/images/joven-reparando-computadora-min-1024x682.jpg" alt="Mobirise Website Builder">
                     </div>
                     <div class="content-wrap">
                         <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5">
@@ -304,7 +304,9 @@
                 <h2 class="mbr-section-title mbr-fonts-style display-2">
                     <strong>Siguenos en</strong>
                 </h2>
-                <p class="mbr-text mbr-fonts-style display-7">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et lobortis lacus. Proin lorem sapien, fermentum id finibus at, molestie ultrices mi. Nulla ante elit, facilisis ac vehicula et, egestas id mauris. Aenean interdum elit in felis scelerisque, in interdum ante pulvinar.</p>
+                <p class="mbr-text mbr-fonts-style display-7">
+                    Para mas informacion, visitanos en nuestras redes oficiales. Para estar atento a todas la noticias mas trasendentales respecto a la empresa y a sus ofertas laborales. Tambien puedes ubicarnos a traves de la informacion abajo.
+                </p>
             </div>
             <div class="icons d-flex align-items-center col-12 col-md-6 justify-content-end mt-md-0 mt-2 flex-wrap">
                 <a href="https://twitter.com/mobirise" target="_blank">
